--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ pillow
 med2image
 nibabel
 opencv-python
+requests
+dicom2nifti
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
+six
