--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,10 @@ google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
 six
+nibabel
+nilearn
+numpy
+scikit-learn
+scipy
+six
+sklearn
